<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catedra2Android</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_ajustes">AjustesActivity</string>
    
    <string name="boton">boton</string>
    <string name="sesion">inicio sesion</string>
    <string name="boton2">yo</string>
    
    <string name="name">nombre</string>
    <string name="clave">contraseña</string>
    <string name="email">email</string>
    <string name="celular">celular</string>
    <string name="avisos">quiere avisos?</string>
     <string name="ok">sep</string>
      <string name="no">No quiero</string>
      <string name="salvardatos">Guardar</string>
      
      <string name="copiar">ficha</string>
       <string name="ingreso">ingreso</string>
       
        <string name="jugar">jugando</string>
         <string name="reir">reir</string>
           <string name="llorar">llorar</string>
           
           <string name="inicio">INICIO</string>
           <string name="comienzo">comenzando</string>
      
      
     
    
    

</resources>
